--- a/styles.css
+++ b/styles.css
@@ -159,8 +159,8 @@ body{
 	overflow: hidden;
 }
 #friends-box li{
-	height: 33%;
-	width: 33%;
+	height: 26%;
+	width: 26%;
 	float: left;
 	list-style-type: none;
 }
@@ -172,7 +172,9 @@ body{
 	float: right;
 	width: 50%;
 }
-
+button {
+	width: 100px;
+}
 
 
 
