--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ body{
 }
 #big-avatar img{
 	/* border-radius: 15%; */
-	margin: 25px 0 0 -20px;
+	margin: 24px 0 0 -24px;
 }
 #avatar-name {
 	float: left;
@@ -128,16 +128,26 @@ body{
 #cover-menu{
 	float: left;
 	width: 100%;
-	padding: 0px 196px;
+	/* padding: 0px 196px; */
 }
 .cover-menu-item{
 	float: left;
 	list-style-type: none;
 	font-family: helvetica;
+	color: #395B9B;
 	border-width: 0.5px; 
 	border-style: solid;
+	border-color: gray;
 	padding: 10px 30px;
 	background-color: white;
+}
+.cover-menu-item:last-child{
+	padding: 18px;
+	padding-left: 120px;
+    padding-right: 18px;
+}
+.cover-menu-item:first-child{
+	padding: 18px 103px;
 }
 #small-avatar-name{
 	font-family: helvetica;
@@ -160,6 +170,11 @@ body{
 	list-style-type: none;
 	width: 100%;
 }
+input{
+	width: 77%;
+	height: 50%;
+	font-size: 22px;
+}
 #friends-box{
 	height: 20%;
 	width: 100%;
@@ -168,7 +183,7 @@ body{
 }
 #friends-box li{
 	height: 26%;
-	width: 26%;
+	width: 22%;
 	float: left;
 	list-style-type: none;
 	background-color: white;
@@ -177,6 +192,13 @@ body{
 #friends-box img{
 	height: 100px;
 	width: 100px;
+}
+#friends-heading{
+	float: left;
+	clear: right;
+    font-family: helvetica;
+    font-size: 100%;
+    width: 100%;
 }
 #column-2{
 	float: right;
@@ -188,6 +210,9 @@ button {
 	font-family: helvetica;
 	font-weight: bold;
 	font-styl
+}
+.drop{
+	clear: left;
 }
 
 
